--- a/kubernetes/bankapp-deployment.yml
+++ b/kubernetes/bankapp-deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: bankapp
-        image: trainwithshubham/bankapp-eks:v2
+        image: bismaya2401/bankapp:v2
         ports:
         - containerPort: 8080
         env:
